Adds security decorators (#623)
