# backend/src/controllers/users.controller.ts
@@ -10,21 +10,18 @@ import {
   Patch,
   Query,
   Request,
+  Security,
 } from 'tsoa';
-
 import {
   User,
   UserCreationParams,
   UserModificationParams,
 } from '../types/users';
 import { ImageService } from '../services/image.service';
-import {
-  validateAuthentication,
-  validateAuthorizationByUsername,
-} from './authorization';
 import { PagedResults } from '../types/paged.results';
 import { UsersRepository } from '../repositories/users.repository';
 import { MongoUsersRepository } from '../repositories/mongo/mongo.users.repository';
+import { AuthScope } from '../middlewares/authorization';
 
 @Route('users')
 export class UsersController extends Controller {
@@ -32,10 +29,10 @@ export class UsersController extends Controller {
   private imageService: ImageService = new ImageService();
   private readonly USERS_LIMIT = 21;
 
+  @Security(AuthScope.AUTH)
   @Get()
   @SuccessResponse('200, OK')
   public async getUsers(
-    @Request() req: any,
     @Query() username = '',
     @Query() limit = this.USERS_LIMIT,
     /**
@@ -48,7 +45,6 @@ export class UsersController extends Controller {
      */
     @Query() after: string | null = null,
   ): Promise<PagedResults<User>> {
-    validateAuthentication(req.user);
     return Promise.resolve(
       this.usersRepository.getUsers(username, limit, before, after),
     ).then(
@@ -62,13 +58,10 @@ export class UsersController extends Controller {
     );
   }
 
+  @Security(AuthScope.AUTH)
   @Get('{username}')
   @SuccessResponse('200, OK')
-  public async getUser(
-    @Path() username: string,
-    @Request() req: any,
-  ): Promise<User> {
-    validateAuthentication(req.user);
+  public async getUser(@Path() username: string): Promise<User> {
     return Promise.resolve(this.usersRepository.getUser(username)).then(
       (user: User) => {
         this.setStatus(200);
@@ -99,6 +92,7 @@ export class UsersController extends Controller {
     );
   }
 
+  @Security(AuthScope.USERNAME)
   @Patch('{username}')
   @SuccessResponse('200, OK')
   public async updateUser(
@@ -106,7 +100,6 @@ export class UsersController extends Controller {
     @Body() params: UserModificationParams,
     @Request() req: any,
   ): Promise<User> {
-    validateAuthorizationByUsername(username, req.user);
     if (params.avatarData) {
       return this.imageService
         .uploadAvatar(params.avatarData)
@@ -139,13 +132,13 @@ export class UsersController extends Controller {
     );
   }
 
+  @Security(AuthScope.USERNAME)
   @Delete('{username}')
   @SuccessResponse('204, No Content')
   public deleteUser(
     @Path() username: string,
     @Request() req: any,
   ): Promise<void> {
-    validateAuthorizationByUsername(username, req.user);
     return Promise.resolve(this.usersRepository.deleteUser(username)).then(
       () => {
         req.logout();
