# backend/src/controllers/users.posts.controller.ts
@@ -6,20 +6,16 @@ import {
   Route,
   SuccessResponse,
   Get,
-  Request,
   Query,
+  Security,
 } from 'tsoa';
-
 import { PostCreationParams, SavedPost } from '../types/posts';
-import {
-  validateAuthentication,
-  validateAuthorizationByUsername,
-} from './authorization';
 import { ImageService } from '../services/image.service';
 import { PagedResults } from '../types/paged.results';
 import { BadRequestError } from '../types/errors';
 import { PostsRepository } from '../repositories/posts.repository';
 import { MongoPostsRepository } from '../repositories/mongo/mongo.posts.repository';
+import { AuthScope } from '../middlewares/authorization';
 
 @Route('users/:username/posts')
 export class UsersPostsController extends Controller {
@@ -27,11 +23,11 @@ export class UsersPostsController extends Controller {
   private imageService: ImageService = new ImageService();
   private readonly POSTS_LIMIT = 21;
 
+  @Security(AuthScope.AUTH)
   @Get()
   @SuccessResponse('200, OK')
   public async getPosts(
     @Path() username: string,
-    @Request() req: any,
     @Query() limit = this.POSTS_LIMIT,
     /**
      * Query posts created at a <date><id> before the one provided.
@@ -43,7 +39,6 @@ export class UsersPostsController extends Controller {
      */
     @Query() after: string | null = null,
   ): Promise<PagedResults<SavedPost>> {
-    validateAuthentication(req.user);
     return Promise.resolve(
       this.postsRepository.getUsersPosts(username, limit, before, after),
     ).then(
@@ -57,14 +52,13 @@ export class UsersPostsController extends Controller {
     );
   }
 
+  @Security(AuthScope.USERNAME)
   @Post()
   @SuccessResponse('201, Created')
   public async createPost(
     @Path() username: string,
     @Body() params: PostCreationParams,
-    @Request() req: any,
   ): Promise<SavedPost> {
-    validateAuthorizationByUsername(username, req.user);
     if (params.data) {
       return this.imageService
         .uploadPost(params.data)
