# backend/src/swagger.json
@@ -433,7 +433,20 @@
 				"additionalProperties": true
 			}
 		},
-		"securitySchemes": {}
+		"securitySchemes": {
+			"AUTH": {
+				"type": "oauth2",
+				"flows": {}
+			},
+			"USERNAME": {
+				"type": "oauth2",
+				"flows": {}
+			},
+			"POST_ID": {
+				"type": "oauth2",
+				"flows": {}
+			}
+		}
 	},
 	"info": {
 		"title": "ugram-backend",
@@ -466,7 +479,11 @@
 						}
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"AUTH": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "query",
@@ -517,7 +534,11 @@
 						}
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"AUTH": []
+					}
+				],
 				"parameters": []
 			}
 		},
@@ -536,7 +557,11 @@
 						}
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"AUTH": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "query",
@@ -602,7 +627,11 @@
 						}
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"AUTH": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -621,7 +650,11 @@
 						"description": ""
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"POST_ID": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -647,7 +680,11 @@
 						}
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"POST_ID": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -678,7 +715,11 @@
 						"description": ""
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"AUTH": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -709,7 +750,11 @@
 						"description": ""
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"AUTH": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -737,7 +782,11 @@
 						}
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"AUTH": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "query",
@@ -800,7 +849,11 @@
 						}
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"AUTH": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "query",
@@ -884,7 +937,11 @@
 						}
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"AUTH": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -910,7 +967,11 @@
 						}
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"USERNAME": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -939,7 +1000,11 @@
 						"description": ""
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"USERNAME": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -967,7 +1032,11 @@
 						}
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"AUTH": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -1021,7 +1090,11 @@
 						}
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"USERNAME": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
